<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Views.Common.Login.LoginActivity"
    android:id="@+id/login_page">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/singhealth_logo"
        android:layout_marginBottom="15dp"
        />


    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="Login"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:ems="10"
        android:hint="@string/login_email"
        android:text=""
        android:layout_height="45dp"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:textColorHighlight="#ff7eff15"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:hint="@string/login_password"
        android:text=""
        android:layout_marginVertical="10dp"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:textSize="20sp" />

     <Button
         android:id="@+id/loginButton"
         android:layout_width="110dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:background="#ffb684"
         android:text="Login"
         android:textSize="18sp" />

</LinearLayout>