<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Containers.AuditorFragmentContainer"
    android:id="@+id/tenantSearchFragment">

    <EditText
        android:id="@+id/tenant_search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/grey_semi_transparent"
        android:inputType="text"
        android:maxLines="1"
        android:hint="Search Tenant" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tenantRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/reloadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reload"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:backgroundTint="@color/button_normal"
        android:layout_gravity="center"
        android:visibility="gone"/>

</LinearLayout>